Archive2/17/be642784144a8e/output
main.cpp: In constructor 'Derived::Derived(int)':
main.cpp:11:5: error: no matching function for call to 'Base::Base()'
     {}
     ^
main.cpp:11:5: note: candidates are:
main.cpp:3:5: note: Base::Base(int)
     Base(int) {}
     ^
main.cpp:3:5: note:   candidate expects 1 argument, 0 provided
main.cpp:1:7: note: constexpr Base::Base(const Base&)
 class Base {
       ^
main.cpp:1:7: note:   candidate expects 1 argument, 0 provided
main.cpp:1:7: note: constexpr Base::Base(Base&&)
main.cpp:1:7: note:   candidate expects 1 argument, 0 provided
main.cpp: At global scope:
main.cpp:8:17: warning: unused parameter 'a' [-Wunused-parameter]
     Derived(int a)
                 ^
