Archive2/17/be642784144a8e/main.cpp
class Base {
public:
    Base(int) {}
};

class Derived : public Base {
public:
    Derived(int a)
    // uncomment to compile:
    //: Base(a)
    {}
};

int main(void) {}
